--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chaty Slovensko</title>
 
-<style>
+</style>
+  <section style="padding:40px;">
+<h2>Kontakt</h2>
+
+<p><b>Chaty Slovensko</b></p>
+<p>Horná Lehota 279, 976 81 Podbrezová</p>
+
+<p>📧 chatyslovensko.info@gmail.com</p>
+<p>📞 0917 067 660</p>
+
+<a href="mailto:chatyslovensko.info@gmail.com"
+style="display:inline-block;
+background:#e63946;
+color:white;
+padding:15px 25px;
+text-decoration:none;
+border-radius:8px;
+margin-top:15px;">
+Rezervovať pobyt
+</a>
+</section>
 body{
 margin:0;
 font-family:Arial;
