--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ margin-top:20px;
 <section>
 <h2>Rezervačný formulár</h2>
 
-<form action="https://formspree.io/f/TVOJ_LINK" method="POST">
+<form action="https://formspree.io/f/index.html" method="POST">
 
 <label>Meno:</label><br>
 <input type="text" name="meno" required><br><br>
