--- a/index.html
+++ b/index.html
@@ -76,7 +76,20 @@ Máte otázku alebo záujem o spoluprácu? Napíšte nám správu.
 <section>
 <div class="card">
 <h2>Kontaktujte nás</h2>
+<form action="https://formspree.io/f/mpqjjgqq" method="POST">
 
+<label>Meno:</label><br>
+<input type="text" name="meno" required><br><br>
+
+<label>Email:</label><br>
+<input type="email" name="email" required><br><br>
+
+<label>Správa:</label><br>
+<textarea name="sprava" required></textarea><br><br>
+
+<button type="submit">Odoslať správu</button>
+
+</form>
 <form action="https://formspree.io/f/mpqjjgqq" method="POST">
 
 <label>Meno</label>
