--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a{color:#0b5aa2;text-decoration:none;font-weight:bold;}
 <body>
 
 <header>
-    <img src="súbor_0000000044fc7243b508696.png" style="max-width:200px;">
+    <img src="index.html" style="max-width:200px;">
 <h1>Chaty Slovensko</h1>
 <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
 </header>
