--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a{color:#0b5aa2;text-decoration:none;font-weight:bold;}
 <body>
 
 <header>
-    <img src="subor_000000044fc7243b5086964db31e526.png" style="max-width:160px;">
+    <img src="./subor_000000044fc7243b5086964db31e526.png" style="max-width:160px;">
 <h1>Chaty Slovensko</h1>
 <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
 </header>
