--- a/index.html
+++ b/index.html
@@ -1,109 +1,173 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chaty Slovensko</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chaty Slovensko</title>
 
-<style>
-body{
-    margin:0;
-    font-family:Arial, sans-serif;
-    background:#f4f6f8;
-    text-align:center;
-}
+  <style>
+    body{
+      margin:0;
+      font-family: Arial, sans-serif;
+      background:#f4f6f8;
+      text-align:center;
+      color:#222;
+    }
 
-header{
-    background:linear-gradient(135deg,#0b5aa2,#2bb673);
-    color:white;
-    padding:60px 20px;
-}
+    header{
+      padding:60px 20px;
+      color:#fff;
+      background:linear-gradient(135deg,#2d7dd2,#2fbf71);
+    }
 
-section{
-    max-width:800px;
-    margin:auto;
-    padding:40px 20px;
-}
+    .logo{
+      width:140px;
+      height:auto;
+      display:block;
+      margin:0 auto 18px auto;
+      filter: drop-shadow(0 6px 12px rgba(0,0,0,0.25));
+    }
 
-.card{
-    background:white;
-    padding:25px;
-    border-radius:12px;
-    box-shadow:0 6px 20px rgba(0,0,0,0.08);
-}
+    header h1{
+      margin:0;
+      font-size:42px;
+      font-weight:800;
+      letter-spacing:0.3px;
+    }
 
-input, textarea{
-    width:100%;
-    padding:12px;
-    margin:8px 0;
-    border-radius:8px;
-    border:1px solid #ccc;
-    font-size:16px;
-}
+    header p{
+      margin:14px 0 0 0;
+      font-size:18px;
+      opacity:0.95;
+    }
 
-button{
-    background:#e63946;
-    color:white;
-    border:none;
-    padding:14px;
-    border-radius:10px;
-    font-size:18px;
-    cursor:pointer;
-    width:100%;
-}
+    .container{
+      max-width:900px;
+      margin:0 auto;
+      padding:30px 16px 60px 16px;
+    }
 
-a{color:#0b5aa2;text-decoration:none;font-weight:bold;}
-</style>
+    .card{
+      background:#fff;
+      border-radius:16px;
+      padding:26px 18px;
+      margin:18px auto;
+      box-shadow:0 10px 25px rgba(0,0,0,0.08);
+      text-align:left;
+    }
+
+    .card h2{
+      margin:0 0 10px 0;
+      font-size:28px;
+      text-align:center;
+    }
+
+    .card p{
+      margin:0;
+      line-height:1.55;
+      text-align:center;
+      color:#333;
+    }
+
+    form{
+      margin-top:10px;
+      text-align:left;
+    }
+
+    label{
+      display:block;
+      font-weight:700;
+      margin:12px 0 6px 0;
+    }
+
+    input, textarea{
+      width:100%;
+      padding:12px;
+      border-radius:10px;
+      border:1px solid #ccc;
+      font-size:16px;
+      box-sizing:border-box;
+    }
+
+    textarea{
+      min-height:120px;
+      resize:vertical;
+    }
+
+    button{
+      margin-top:14px;
+      width:100%;
+      background:#e63946;
+      color:#fff;
+      border:none;
+      padding:14px;
+      border-radius:12px;
+      font-size:18px;
+      font-weight:800;
+      cursor:pointer;
+    }
+
+    button:active{
+      transform:scale(0.99);
+    }
+
+    .contact-line{
+      text-align:center;
+      margin-top:6px;
+      line-height:1.7;
+    }
+
+    .contact-line a{
+      color:#0b5aa2;
+      text-decoration:none;
+      font-weight:700;
+    }
+  </style>
 </head>
 
 <body>
 
-<header>
-    <img src="subor_000000044fc7243b5086964db31e526.png" alt="Logo" style="width:140px;">
-<h1>Chaty Slovensko</h1>
-<p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
-</header>
+  <header>
+    <img class="logo" src="subor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
+    <h1>Chaty Slovensko</h1>
+    <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
+  </header>
 
-<section>
-<div class="card">
-<h2>O portáli</h2>
-<p>
-Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
-Máte otázku alebo záujem o spoluprácu? Napíšte nám správu.
-</p>
-</div>
-</section>
+  <div class="container">
 
-<section>
-<div class="card">
-<h2>Kontaktujte nás</h2>
+    <div class="card">
+      <h2>O portáli</h2>
+      <p>
+        Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
+        Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
+      </p>
+    </div>
 
-<form action="https://formspree.io/f/mpqjjgqq" method="POST">
+    <div class="card">
+      <h2>Kontaktujte nás</h2>
 
-<label>Meno</label>
-<input type="text" name="meno" required>
+      <!-- FORM: sem si potom dáme tvoj Formspree link -->
+      <form action="https://formspree.io/f/XXXXXXXX" method="POST">
+        <label for="meno">Meno:</label>
+        <input id="meno" type="text" name="meno" required>
 
-<label>Email</label>
-<input type="email" name="email" required>
+        <label for="email">E-mail:</label>
+        <input id="email" type="email" name="email" required>
 
-<label>Správa</label>
-<textarea name="sprava" placeholder="Vaša otázka..." required></textarea>
+        <label for="sprava">Správa:</label>
+        <textarea id="sprava" name="sprava" required></textarea>
 
-<button type="submit">Odoslať správu</button>
+        <button type="submit">Odoslať správu</button>
+      </form>
 
-</form>
+      <div class="contact-line" style="margin-top:18px;">
+        <div>Horná Lehota 279, 976 81 Podbrezová</div>
+        <div>E-mail: <a href="mailto:chatyslovensko.sk@gmail.com">chatyslovensko.sk@gmail.com</a></div>
+        <div>Tel.: <a href="tel:+421917067600">+421 917 067 600</a></div>
+      </div>
+    </div>
 
-</div>
-</section>
-
-<section>
-<div class="card">
-<h2>Kontakt</h2>
-<p>Horná Lehota 279, 976 81 Podbrezová</p>
-<p>Email: <a href="mailto:chatyslovensko.info@gmail.com">chatyslovensko.info@gmail.com</a></p>
-<p>Tel: <a href="tel:+421917067660">0917 067 660</a></p>
-</div>
-</section>
+  </div>
 
 </body>
 </html>
