--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
 
   <header>
-    <img class="logo" src="subor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
+    <img class="logo" src="súbor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
     <h1>Chaty Slovensko</h1>
     <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
   </header>
