--- a/index.html
+++ b/index.html
@@ -1,173 +1,143 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chaty Slovensko</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body{
-      margin:0;
-      font-family: Arial, sans-serif;
-      background:#f4f6f8;
-      text-align:center;
-      color:#222;
-    }
+<title>Chaty Slovensko</title>
 
-    header{
-      padding:60px 20px;
-      color:#fff;
-      background:linear-gradient(135deg,#2d7dd2,#2fbf71);
-    }
+<style>
 
-    .logo{
-      width:140px;
-      height:auto;
-      display:block;
-      margin:0 auto 18px auto;
-      filter: drop-shadow(0 6px 12px rgba(0,0,0,0.25));
-    }
+body{
+    margin:0;
+    font-family:Arial, sans-serif;
+    background:#f4f6f8;
+    text-align:center;
+}
 
-    header h1{
-      margin:0;
-      font-size:42px;
-      font-weight:800;
-      letter-spacing:0.3px;
-    }
+/* HLAVIČKA */
+header{
+    background:linear-gradient(135deg,#2c7be5,#2fbf71);
+    color:white;
+    padding:60px 20px;
+}
 
-    header p{
-      margin:14px 0 0 0;
-      font-size:18px;
-      opacity:0.95;
-    }
+/* LOGO */
+header img{
+    width:140px;
+    margin-bottom:15px;
+}
 
-    .container{
-      max-width:900px;
-      margin:0 auto;
-      padding:30px 16px 60px 16px;
-    }
+/* SEKcie */
+section{
+    max-width:800px;
+    margin:40px auto;
+    padding:20px;
+}
 
-    .card{
-      background:#fff;
-      border-radius:16px;
-      padding:26px 18px;
-      margin:18px auto;
-      box-shadow:0 10px 25px rgba(0,0,0,0.08);
-      text-align:left;
-    }
+/* KARTA */
+.card{
+    background:white;
+    padding:25px;
+    border-radius:12px;
+    box-shadow:0 6px 20px rgba(0,0,0,0.08);
+}
 
-    .card h2{
-      margin:0 0 10px 0;
-      font-size:28px;
-      text-align:center;
-    }
+/* FORMULÁR */
+input, textarea{
+    width:100%;
+    padding:12px;
+    margin-top:8px;
+    margin-bottom:15px;
+    border-radius:8px;
+    border:1px solid #ccc;
+    font-size:16px;
+}
 
-    .card p{
-      margin:0;
-      line-height:1.55;
-      text-align:center;
-      color:#333;
-    }
+button{
+    background:#e63946;
+    color:white;
+    border:none;
+    padding:14px;
+    border-radius:10px;
+    font-size:18px;
+    cursor:pointer;
+    width:100%;
+}
 
-    form{
-      margin-top:10px;
-      text-align:left;
-    }
+button:hover{
+    background:#c92f3b;
+}
 
-    label{
-      display:block;
-      font-weight:700;
-      margin:12px 0 6px 0;
-    }
+a{
+    color:#0b5aa2;
+    text-decoration:none;
+}
 
-    input, textarea{
-      width:100%;
-      padding:12px;
-      border-radius:10px;
-      border:1px solid #ccc;
-      font-size:16px;
-      box-sizing:border-box;
-    }
-
-    textarea{
-      min-height:120px;
-      resize:vertical;
-    }
-
-    button{
-      margin-top:14px;
-      width:100%;
-      background:#e63946;
-      color:#fff;
-      border:none;
-      padding:14px;
-      border-radius:12px;
-      font-size:18px;
-      font-weight:800;
-      cursor:pointer;
-    }
-
-    button:active{
-      transform:scale(0.99);
-    }
-
-    .contact-line{
-      text-align:center;
-      margin-top:6px;
-      line-height:1.7;
-    }
-
-    .contact-line a{
-      color:#0b5aa2;
-      text-decoration:none;
-      font-weight:700;
-    }
-  </style>
+</style>
 </head>
 
 <body>
 
-  <header>
-    <img class="logo" src="súbor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
-    <h1>Chaty Slovensko</h1>
-    <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
-  </header>
+<header>
 
-  <div class="container">
+<img src="súbor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
 
-    <div class="card">
-      <h2>O portáli</h2>
-      <p>
-        Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
-        Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
-      </p>
-    </div>
+<h1>Chaty Slovensko</h1>
 
-    <div class="card">
-      <h2>Kontaktujte nás</h2>
+<p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
 
-      <!-- FORM: sem si potom dáme tvoj Formspree link -->
-      <form action="https://formspree.io/f/XXXXXXXX" method="POST">
-        <label for="meno">Meno:</label>
-        <input id="meno" type="text" name="meno" required>
+</header>
 
-        <label for="email">E-mail:</label>
-        <input id="email" type="email" name="email" required>
+<section>
+<div class="card">
 
-        <label for="sprava">Správa:</label>
-        <textarea id="sprava" name="sprava" required></textarea>
+<h2>O portáli</h2>
 
-        <button type="submit">Odoslať správu</button>
-      </form>
+<p>
+Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
+Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
+</p>
 
-      <div class="contact-line" style="margin-top:18px;">
-        <div>Horná Lehota 279, 976 81 Podbrezová</div>
-        <div>E-mail: <a href="mailto:chatyslovensko.sk@gmail.com">chatyslovensko.sk@gmail.com</a></div>
-        <div>Tel.: <a href="tel:+421917067600">+421 917 067 600</a></div>
-      </div>
-    </div>
+</div>
+</section>
 
-  </div>
+
+<section>
+<div class="card">
+
+<h2>Kontaktujte nás</h2>
+
+<form action="https://formspree.io/f/mpqjjgqq" method="POST">
+
+<label>Meno</label>
+<input type="text" name="meno" required>
+
+<label>E-mail</label>
+<input type="email" name="email" required>
+
+<label>Správa</label>
+<textarea name="sprava" rows="5" required></textarea>
+
+<button type="submit">Odoslať správu</button>
+
+</form>
+
+</div>
+</section>
+
+
+<section>
+<div class="card">
+
+<h2>Kontakt</h2>
+
+<p>Horná Lehota 279, 976 81</p>
+<p>E-mail: <a href="mailto:chatyslovensko@gmail.com">chatyslovensko@gmail.com</a></p>
+<p>Tel.: <a href="tel:+421917000000">+421 917 000 000</a></p>
+
+</div>
+</section>
 
 </body>
 </html>
