--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ a{
 
 <header>
 
-<img src="subor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko">
+<img src="./subor_000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko" style="width:140px; margin-bottom:15px;">
 
 <h1>Chaty Slovensko</h1>
 
