--- a/index.html
+++ b/index.html
@@ -81,7 +81,18 @@ a{
 
 <header>
 
-<img src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/main/file_0000000044fc7243b5086964db31e526.png" alt="Logo Chaty Slovensko" style="width:140px;">
+<img src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/main/file_0000000044fc7243b5086964db31e526.png"
+alt="Logo Chaty Slovensko"
+style="
+width:220px;
+max-width:80%;
+display:block;
+margin:0 auto 20px auto;
+border-radius:20px;
+box-shadow:0 10px 25px rgba(0,0,0,0.25);
+background:white;
+padding:10px;
+">
 
 <h1>Chaty Slovensko</h1>
 
