--- a/index.html
+++ b/index.html
@@ -1,174 +1,221 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chaty Slovensko</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chaty Slovensko</title>
 
-  <style>
-    body{
-      margin:0;
-      font-family: Arial, sans-serif;
-      background:#f4f6f8;
-      text-align:center;
-      color:#111;
-    }
+<style>
 
-    /* HERO HEADER */
-    .hero{
-      background: linear-gradient(135deg,#2c7be5,#2bb673);
-      padding:60px 20px;
-      color:#fff;
-    }
-    .hero .logo{
-      width:240px;
-      max-width:85%;
-      margin:0 auto 22px;
-      display:block;
-      filter: drop-shadow(0 16px 26px rgba(0,0,0,0.35));
-    }
-    .hero h1{
-      margin:10px 0 8px;
-      font-size:44px;
-      line-height:1.1;
-    }
-    .hero p{
-      margin:0 auto;
-      font-size:18px;
-      opacity:0.92;
-      max-width:620px;
-      line-height:1.4;
-    }
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#f3f5f7;
+  color:#111;
+  text-align:center;
+}
 
-    /* SECTIONS */
-    section{
-      max-width:900px;
-      margin:0 auto;
-      padding:40px 18px;
-    }
+/* HERO */
+.hero{
+  background:linear-gradient(135deg,#2c7be5,#2bb673);
+  padding:70px 20px 90px;
+  color:white;
+  position:relative;
+  overflow:hidden;
+}
 
-    .card{
-      background:#fff;
-      padding:28px 22px;
-      border-radius:18px;
-      box-shadow:0 10px 25px rgba(0,0,0,0.08);
-      margin:22px auto;
-      max-width:760px;
-      text-align:center;
-    }
+/* jemný svetelný efekt */
+.hero::after{
+  content:"";
+  position:absolute;
+  width:500px;
+  height:500px;
+  background:rgba(255,255,255,0.08);
+  border-radius:50%;
+  top:-150px;
+  right:-150px;
+}
 
-    .card h2{
-      margin:0 0 14px;
-      font-size:40px;
-    }
+/* LOGO */
+.logo-box{
+  display:inline-block;
+  background:white;
+  padding:18px;
+  border-radius:22px;
+  box-shadow:0 18px 45px rgba(0,0,0,0.25);
+  margin-bottom:25px;
+}
 
-    .card p{
-      margin:0 auto;
-      font-size:18px;
-      line-height:1.5;
-      max-width:650px;
-      color:#222;
-    }
+.logo-box img{
+  width:190px;
+  max-width:80vw;
+  display:block;
+}
 
-    /* FORM */
-    form{
-      text-align:left;
-      max-width:520px;
-      margin:0 auto;
-    }
-    label{
-      display:block;
-      font-weight:700;
-      margin:12px 0 6px;
-    }
-    input, textarea{
-      width:100%;
-      padding:12px;
-      border-radius:10px;
-      border:1px solid #ccc;
-      font-size:16px;
-      box-sizing:border-box;
-      outline:none;
-    }
-    textarea{ min-height:120px; resize:vertical; }
+/* TEXT */
+.hero h1{
+  margin:10px 0;
+  font-size:42px;
+}
 
-    button{
-      width:100%;
-      margin-top:14px;
-      padding:14px;
-      border:none;
-      border-radius:12px;
-      font-size:18px;
-      font-weight:800;
-      cursor:pointer;
-      background:#e63946;
-      color:#fff;
-    }
-    button:hover{
-      opacity:0.92;
-    }
+.hero p{
+  font-size:18px;
+  opacity:0.95;
+  max-width:600px;
+  margin:auto;
+}
 
-    .contact-line{
-      margin:10px 0 0;
-      font-size:18px;
-    }
+/* SEKCIE */
+section{
+  max-width:900px;
+  margin:auto;
+  padding:40px 18px;
+}
 
-    a{ color:#0b5aa2; text-decoration:none; }
-    a:hover{ text-decoration:underline; }
-  </style>
+.card{
+  background:white;
+  padding:30px 24px;
+  border-radius:20px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.08);
+  margin-top:-60px;
+}
+
+.card + .card{
+  margin-top:30px;
+}
+
+.card h2{
+  font-size:36px;
+  margin-top:0;
+}
+
+.card p{
+  font-size:18px;
+  line-height:1.6;
+  max-width:650px;
+  margin:auto;
+}
+
+/* FORM */
+form{
+  text-align:left;
+  max-width:520px;
+  margin:auto;
+}
+
+label{
+  font-weight:bold;
+  display:block;
+  margin:12px 0 6px;
+}
+
+input, textarea{
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid #ccc;
+  font-size:16px;
+  box-sizing:border-box;
+}
+
+textarea{
+  min-height:120px;
+}
+
+button{
+  width:100%;
+  padding:14px;
+  margin-top:15px;
+  border:none;
+  border-radius:12px;
+  background:#e63946;
+  color:white;
+  font-size:18px;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+button:hover{
+  opacity:0.9;
+}
+
+.contact-line{
+  font-size:18px;
+  margin:8px 0;
+}
+
+a{
+  color:#0b5aa2;
+  text-decoration:none;
+}
+
+a:hover{
+  text-decoration:underline;
+}
+
+</style>
 </head>
 
 <body>
 
-  <header class="hero">
-    <img
-      src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/main/file_0000000044fc7243b5086964db31e526.png"
-      alt="Logo Chaty Slovensko"
-      class="logo"
-    />
-    <h1>Chaty Slovensko</h1>
-    <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
-  </header>
+<header class="hero">
 
-  <section>
-    <div class="card">
-      <h2>O portáli</h2>
-      <p>
-        Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
-        Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
-      </p>
-    </div>
-  </section>
+  <div class="logo-box">
+    <img src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/main/file_0000000044fc7243b5086964db31e526.png"
+    alt="Logo Chaty Slovensko">
+  </div>
 
-  <section>
-    <div class="card">
-      <h2>Kontaktujte nás</h2>
+  <h1>Chaty Slovensko</h1>
+  <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
 
-      <!-- FORM (LEN JEDEN) -->
-      <form action="https://formspree.io/f/TVORE_FORM_ID" method="POST">
-        <label for="meno">Meno</label>
-        <input id="meno" type="text" name="meno" placeholder="Vaše meno" required />
+</header>
 
-        <label for="email">E-mail</label>
-        <input id="email" type="email" name="email" placeholder="Váš e-mail" required />
+<section>
 
-        <label for="sprava">Správa</label>
-        <textarea id="sprava" name="sprava" placeholder="Vaša otázka..." required></textarea>
+<div class="card">
+<h2>O portáli</h2>
+<p>
+Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
+Máte otázku alebo záujem o spoluprácu? Napíšte nám správu.
+</p>
+</div>
 
-        <button type="submit">Odoslať správu</button>
-      </form>
+<div class="card">
+<h2>Kontaktujte nás</h2>
 
-    </div>
-  </section>
+<form action="https://formspree.io/f/TVORE_FORM_ID" method="POST">
 
-  <section>
-    <div class="card">
-      <h2>Kontakt</h2>
-      <p class="contact-line">Horná Lehota 279, 976 81 Podbrezová</p>
-      <p class="contact-line">E-mail: <a href="mailto:chatyslovensko.sk@gmail.com">chatyslovensko.sk@gmail.com</a></p>
-      <p class="contact-line">Tel.: <a href="tel:+421917067600">+421 917 067 600</a></p>
-    </div>
-  </section>
+<label>Meno</label>
+<input type="text" name="meno" required>
+
+<label>E-mail</label>
+<input type="email" name="email" required>
+
+<label>Správa</label>
+<textarea name="sprava" required></textarea>
+
+<button type="submit">Odoslať správu</button>
+
+</form>
+
+</div>
+
+<div class="card">
+<h2>Kontakt</h2>
+<p class="contact-line">Horná Lehota 279, 976 81 Podbrezová</p>
+<p class="contact-line">
+E-mail:
+<a href="mailto:chatyslovensko.sk@gmail.com">
+chatyslovensko.sk@gmail.com
+</a>
+</p>
+<p class="contact-line">
+Tel:
+<a href="tel:+421917067600">+421 917 067 600</a>
+</p>
+</div>
+
+</section>
 
 </body>
 </html>
