--- a/index.html
+++ b/index.html
@@ -1,221 +1,166 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chaty Slovensko</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chaty Slovensko</title>
 
-<style>
+  <style>
+    body{
+      margin:0;
+      font-family: Arial, sans-serif;
+      background:#f4f6f8;
+      text-align:center;
+    }
 
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#f3f5f7;
-  color:#111;
-  text-align:center;
-}
+    /* HERO (hlavička) */
+    .hero{
+      background: linear-gradient(135deg,#3a7bd5,#00d2ff);
+      color:#fff;
+      padding:60px 20px;
+      text-align:center;
+    }
 
-/* HERO */
-.hero{
-  background:linear-gradient(135deg,#2c7be5,#2bb673);
-  padding:70px 20px 90px;
-  color:white;
-  position:relative;
-  overflow:hidden;
-}
+    .logo{
+      width:220px;
+      max-width:80%;
+      background:#fff;
+      padding:20px;
+      border-radius:25px;
+      box-shadow:0 10px 25px rgba(0,0,0,0.25);
+      margin:0 auto 20px auto;
+      display:block;
+    }
 
-/* jemný svetelný efekt */
-.hero::after{
-  content:"";
-  position:absolute;
-  width:500px;
-  height:500px;
-  background:rgba(255,255,255,0.08);
-  border-radius:50%;
-  top:-150px;
-  right:-150px;
-}
+    h1{
+      margin:0;
+      font-size:48px;
+      line-height:1.1;
+    }
 
-/* LOGO */
-.logo-box{
-  display:inline-block;
-  background:white;
-  padding:18px;
-  border-radius:22px;
-  box-shadow:0 18px 45px rgba(0,0,0,0.25);
-  margin-bottom:25px;
-}
+    .hero p{
+      font-size:20px;
+      margin:15px 0 0 0;
+      opacity:0.95;
+    }
 
-.logo-box img{
-  width:190px;
-  max-width:80vw;
-  display:block;
-}
+    /* SEKCIE */
+    section{
+      max-width:800px;
+      margin:0 auto;
+      padding:40px 20px;
+    }
 
-/* TEXT */
-.hero h1{
-  margin:10px 0;
-  font-size:42px;
-}
+    .card{
+      background:#fff;
+      padding:30px;
+      border-radius:25px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);
+      margin-bottom:30px;
+    }
 
-.hero p{
-  font-size:18px;
-  opacity:0.95;
-  max-width:600px;
-  margin:auto;
-}
+    .card h2{
+      margin-top:0;
+      font-size:40px;
+    }
 
-/* SEKCIE */
-section{
-  max-width:900px;
-  margin:auto;
-  padding:40px 18px;
-}
+    .card p{
+      font-size:18px;
+      line-height:1.6;
+      margin:0;
+      color:#333;
+    }
 
-.card{
-  background:white;
-  padding:30px 24px;
-  border-radius:20px;
-  box-shadow:0 12px 30px rgba(0,0,0,0.08);
-  margin-top:-60px;
-}
+    /* FORM */
+    label{
+      display:block;
+      text-align:left;
+      font-weight:bold;
+      margin:12px 0 6px 0;
+    }
 
-.card + .card{
-  margin-top:30px;
-}
+    input, textarea{
+      width:100%;
+      padding:12px;
+      border-radius:10px;
+      border:1px solid #ccc;
+      font-size:16px;
+      box-sizing:border-box;
+    }
 
-.card h2{
-  font-size:36px;
-  margin-top:0;
-}
+    textarea{
+      min-height:120px;
+      resize:vertical;
+    }
 
-.card p{
-  font-size:18px;
-  line-height:1.6;
-  max-width:650px;
-  margin:auto;
-}
+    button{
+      margin-top:15px;
+      width:100%;
+      padding:14px;
+      border:none;
+      border-radius:12px;
+      background:#e63946;
+      color:white;
+      font-size:18px;
+      cursor:pointer;
+    }
 
-/* FORM */
-form{
-  text-align:left;
-  max-width:520px;
-  margin:auto;
-}
+    button:hover{
+      opacity:0.95;
+    }
 
-label{
-  font-weight:bold;
-  display:block;
-  margin:12px 0 6px;
-}
-
-input, textarea{
-  width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #ccc;
-  font-size:16px;
-  box-sizing:border-box;
-}
-
-textarea{
-  min-height:120px;
-}
-
-button{
-  width:100%;
-  padding:14px;
-  margin-top:15px;
-  border:none;
-  border-radius:12px;
-  background:#e63946;
-  color:white;
-  font-size:18px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-button:hover{
-  opacity:0.9;
-}
-
-.contact-line{
-  font-size:18px;
-  margin:8px 0;
-}
-
-a{
-  color:#0b5aa2;
-  text-decoration:none;
-}
-
-a:hover{
-  text-decoration:underline;
-}
-
-</style>
+    a{
+      color:#0b5aa2;
+      text-decoration:none;
+    }
+  </style>
 </head>
 
 <body>
 
-<header class="hero">
+  <header class="hero">
+    <img
+      class="logo"
+      src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/refs/heads/main/IMG_20260221_121922.png"
+      alt="Logo Chaty Slovensko"
+    />
+    <h1>Chaty Slovensko</h1>
+    <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
+  </header>
 
-  <div class="logo-box">
-    <img src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/main/file_0000000044fc7243b5086964db31e526.png"
-    alt="Logo Chaty Slovensko">
-  </div>
+  <section>
+    <div class="card">
+      <h2>O portáli</h2>
+      <p>
+        Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
+        Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
+      </p>
+    </div>
 
-  <h1>Chaty Slovensko</h1>
-  <p>Ubytovací portál pre chaty a apartmány na Slovensku</p>
+    <div class="card">
+      <h2>Kontaktujte nás</h2>
 
-</header>
+      <!-- SEM si keď chceš neskôr dáme Formspree/Google Form -->
+      <form>
+        <label for="meno">Meno</label>
+        <input id="meno" type="text" name="meno" placeholder="Vaše meno" required>
 
-<section>
+        <label for="email">E-mail</label>
+        <input id="email" type="email" name="email" placeholder="Váš e-mail" required>
 
-<div class="card">
-<h2>O portáli</h2>
-<p>
-Chaty Slovensko je portál pre prezentáciu chát a ubytovania na Slovensku.
-Máte otázku alebo záujem o spoluprácu? Napíšte nám správu.
-</p>
-</div>
+        <label for="sprava">Správa</label>
+        <textarea id="sprava" name="sprava" placeholder="Vaša správa..." required></textarea>
 
-<div class="card">
-<h2>Kontaktujte nás</h2>
+        <button type="submit">Odoslať správu</button>
+      </form>
 
-<form action="https://formspree.io/f/TVORE_FORM_ID" method="POST">
-
-<label>Meno</label>
-<input type="text" name="meno" required>
-
-<label>E-mail</label>
-<input type="email" name="email" required>
-
-<label>Správa</label>
-<textarea name="sprava" required></textarea>
-
-<button type="submit">Odoslať správu</button>
-
-</form>
-
-</div>
-
-<div class="card">
-<h2>Kontakt</h2>
-<p class="contact-line">Horná Lehota 279, 976 81 Podbrezová</p>
-<p class="contact-line">
-E-mail:
-<a href="mailto:chatyslovensko.sk@gmail.com">
-chatyslovensko.sk@gmail.com
-</a>
-</p>
-<p class="contact-line">
-Tel:
-<a href="tel:+421917067600">+421 917 067 600</a>
-</p>
-</div>
-
-</section>
+      <p style="margin-top:18px;">
+        Horná Lehota 279, 976 81 Podbrezová<br>
+        E-mail: <a href="mailto:chatyslovensko@gmail.com">chatyslovensko@gmail.com</a><br>
+        Tel.: <a href="tel:+421900000000">+421 900 000 000</a>
+      </p>
+    </div>
+  </section>
 
 </body>
 </html>
