--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     }
 
     .logo{
-      width:220px;
-      max-width:80%;
-      background:#fff;
-      padding:20px;
-      border-radius:25px;
-      box-shadow:0 10px 25px rgba(0,0,0,0.25);
-      margin:0 auto 20px auto;
-      display:block;
-    }
+  width:220px;
+  max-width:80%;
+  background: transparent;
+  padding:0;
+  border-radius:0;
+  box-shadow:none;
+  margin:0 auto 20px auto;
+  display:block;
+}
 
     h1{
       margin:0;
