--- a/index.html
+++ b/index.html
@@ -97,12 +97,17 @@ footer{
     line-height:1.6;
 }
 
+.note{
+    font-size:14px;
+    color:#555;
+    margin-top:10px;
+}
+
 </style>
 </head>
 
 <body>
 
-<!-- ===== HLAVIČKA ===== -->
 <header>
 
 <img src="https://raw.githubusercontent.com/michalfiasky-prog/ChatySlovensko/refs/heads/main/IMG_20260221_121922.png">
@@ -114,7 +119,6 @@ Ubytovací portál pre chaty a apartmány na Slovensku
 
 </header>
 
-<!-- ===== O PORTÁLI ===== -->
 <section>
 <div class="card">
 
@@ -128,7 +132,6 @@ Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
 </div>
 </section>
 
-<!-- ===== KONTAKTNÝ FORMULÁR ===== -->
 <section>
 <div class="card">
 
@@ -149,7 +152,6 @@ Máte otázku alebo máte záujem o spoluprácu? Napíšte nám správu.
 </div>
 </section>
 
-<!-- ===== KONTAKTNÉ ÚDAJE ===== -->
 <section>
 <div class="card">
 
@@ -163,11 +165,17 @@ Horná Lehota 279<br>
 </p>
 
 <p>
-📞 0917 067 660<br>
+📞 0915 098 086<br>
+📞 0917 067 660
 </p>
 
 <p>
 ✉️ chatyslovensko.info@gmail.com
+</p>
+
+<p class="note">
+Dočasne používame Gmail kontakt. Firemné e-mailové adresy
+<strong>@chatyslovensko.sk</strong> budú čoskoro spustené.
 </p>
 
 <p>
@@ -178,7 +186,6 @@ DIČ: 2122732337
 </div>
 </section>
 
-<!-- ===== FOOTER ===== -->
 <footer>
 © 2026 ChatySlovensko.sk
 </footer>
